delete photo tags for now until there's Ruby code. Fix alignment on Services page.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1513,9 +1513,9 @@ input[class="voices-btn"]:hover {
 	border-radius: 9px;
 	background-color: #fff;
 	float: left;
-	margin: 0px 0px 0px 40px;
+	margin: 0px 0px 0px 60px;
 	padding: 10px;
-	width: 650px;
+	width: 618px;
 	box-shadow: -9px 9px 20px #898989;
 }
 .review-box:before{
